src/test/resources/testinput/parsable/symtab/invalid_coco/oclExpressionsBoolean.ocl
/* (c) https://github.com/MontiCore/monticore */
package invariants;

ocl oclExpressionsBoolean {
  inv(Boolean a, Boolean b):
    (if a==b then a else b) &&
    (a==b ? a : b) &&
    (a <=> b) &&
    (typeif a instanceof Boolean then a else false) &&
    (a implies b);
}
